@@ -2,22 +2,20 @@ package me.xiaoying.liveget.authorizeserver.command;
 
 import me.xiaoying.liveget.authorizeserver.entity.CommandSender;
 
-import java.util.Collections;
 import java.util.List;
 
-public class StopCommand extends Command {
-    public StopCommand(String name, String description, String usage) {
+public class UserCommand extends Command {
+    public UserCommand(String name, String description, String usage) {
         super(name, description, usage);
     }
 
     @Override
     public boolean onCommand(CommandSender sender, Command command, String head, String[] args) {
-        System.exit(0);
-        return true;
+        return false;
     }
 
     @Override
     public List<String> onTabComplete(CommandSender sender, Command command, String head, String[] args) {
-        return Collections.emptyList();
+        return List.of();
     }
 }
